# hacas

./: CAS.hs  Evaluation.hs  Expression.hs  Hacas.hs  Parser.hs  README.md  Utils.hs  hacas.cabal
src/: CAS.hs  Hacas.hs  Parser.hs
src/Hacas/: Evaluation.hs  Expression.hs  Parser.hs  Simplifications.hs
